# SciFi_simulation

./: #memo#  CMakeLists.txt  CMakeLists.txt~  GNUmakefile  README  event.sh  g4mac_inject_toy.mac  g4mac_inject_toz.mac  memo  run1.mac  sub.sh  tmp.mac  vis.mac  wavy.cc  wavy.cc~
include/: MyConst.hh  NeutRootHandlers.h  WLSActionInitialization.hh  WLSDetectorConstruction.hh  WLSDetectorConstruction_neut.bak  WLSEventAction.hh  WLSExN04Field.hh  WLSPhysicsList.hh  WLSPrimaryGeneratorAction.hh  WLSRunAction.hh  WLSStackingAction.hh  WLSSteppingAction.hh  neutctrl.h  neutctrlLinkDef.h  neutfsipart.h  neutfsipartLinkDef.h  neutfsivert.h  neutfsivertLinkDef.h  neutnucfsistep.h  neutnucfsistepLinkDef.h  neutnucfsivert.h  neutnucfsivertLinkDef.h  neutpart.h  neutpartLinkDef.h  neutrootTreeSingleton.h  neutvect.h  neutvectLinkDef.h  neutvtx.h  neutvtxLinkDef.h  sizeOfFiberArray.hh
src/: #WLSDetectorConstruction.cc#  WLSActionInitialization.cc  WLSDetectorConstruction.220721.bak  WLSDetectorConstruction.cc  WLSDetectorConstruction.cc.away  WLSDetectorConstruction.cc~  WLSDetectorConstruction_neut.bak  WLSEventAction.cc  WLSExN04Field.cc  WLSExtraPhysics.cc  WLSMaterials.cc  WLSOpticalPhysics.cc  WLSPhysicsList.cc  WLSPhysicsListMessenger.cc  WLSPrimaryGeneratorAction.cc  WLSPrimaryGeneratorAction.cc~  WLSRunAction.cc  WLSStackingAction.cc  WLSSteppingAction.cc  WLSTrajectory.cc
